@@ -30,6 +30,8 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.matsim.api.core.v01.Coord;
 import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.Scenario;
@@ -38,20 +40,18 @@ import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
 import org.matsim.api.core.v01.network.NetworkFactory;
 import org.matsim.api.core.v01.network.Node;
-import org.matsim.api.core.v01.population.Activity;
-import org.matsim.api.core.v01.population.Leg;
-import org.matsim.api.core.v01.population.Person;
-import org.matsim.api.core.v01.population.Plan;
+import org.matsim.api.core.v01.population.*;
+import org.matsim.core.config.Config;
 import org.matsim.core.config.ConfigUtils;
 import org.matsim.core.config.groups.RoutingConfigGroup;
 import org.matsim.core.config.groups.RoutingConfigGroup.AccessEgressType;
 import org.matsim.core.controler.AbstractModule;
 import org.matsim.core.controler.Injector;
+import org.matsim.core.controler.PrepareForSimUtils;
 import org.matsim.core.population.PopulationUtils;
 import org.matsim.core.population.routes.LinkNetworkRouteFactory;
 import org.matsim.core.population.routes.NetworkRoute;
 import org.matsim.core.router.DijkstraFactory;
-import org.matsim.core.router.PlanRouter;
 import org.matsim.core.router.TripRouter;
 import org.matsim.core.router.TripRouterModule;
 import org.matsim.core.router.costcalculators.OnlyTimeDependentTravelDisutility;
@@ -62,14 +62,13 @@ import org.matsim.core.router.util.TravelTime;
 import org.matsim.core.scenario.ScenarioByInstanceModule;
 import org.matsim.core.scenario.ScenarioUtils;
 import org.matsim.core.trafficmonitoring.FreeSpeedTravelTime;
-import org.matsim.core.utils.timing.TimeInterpretation;
 import org.matsim.core.utils.timing.TimeInterpretationModule;
 import org.matsim.testcases.MatsimTestUtils;
 
 public class EditRoutesTest {
 
 	@RegisterExtension
-	private MatsimTestUtils utils = new MatsimTestUtils();
+	private final MatsimTestUtils utils = new MatsimTestUtils();
 
 	// yyyy This test relies heavily on position counting in plans.  With the introduction of intermediate walk legs the positions changed.
 	// I tried to guess the correct indices, but it would be more honest to change this to TripStructureUtils.  kai, feb'16
@@ -87,11 +86,14 @@ public class EditRoutesTest {
 	/**
 	 * @author cdobler
 	 */
-	@Test
-	void testReplanFutureLegRoute() {
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanFutureLegRoute( AccessEgressType accessEgressType ) {
 		// this is ok (we can still replan a single leg with the computer science router). kai, dec'15
 
-		createScenario();
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -122,10 +124,10 @@ public class EditRoutesTest {
 		// replan the legs to recreate the routes
 
 		//		assertEquals(true, ed.replanFutureLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), scenario.getNetwork(), tripRouter));
-		assertEquals(true, ed.replanFutureLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson() ) ); // 1-->3
+		assertTrue( ed.replanFutureLegRoute( (Leg) plan.getPlanElements().get( firstCarLeg ), plan.getPerson() ) ); // 1-->3
 
 		//		assertEquals(true, ed.replanFutureLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), scenario.getNetwork(), tripRouter));
-		assertEquals(true, ed.replanFutureLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson() ) ); // 3-->9
+		assertTrue( ed.replanFutureLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson() ) ); // 3-->9
 
 		// the legs have been replaced, the original ones should not have changed
 		assertEquals(0, networkRouteHW.getLinkIds().size());
@@ -145,13 +147,16 @@ public class EditRoutesTest {
 		assertEquals(3, networkRouteWH.getLinkIds().size());	// l4, l5, l2
 	}
 
-	@Test
-	void testRelocateFutureLegRoute() {
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testRelocateFutureLegRoute( AccessEgressType accessEgressType ) {
 		// yyyy this test is misleading.  "relocateFutureLegRoute"  is ok, but it does not look after the overall plan consistency,
 		// as this test implies.  kai, feb'16
 
 
-		createScenario();
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 
 		int firstCarLeg = 1 ; // 1-->3
 		int scndAct = 2 ;
@@ -187,11 +192,11 @@ public class EditRoutesTest {
 
 		// relocate the legs to recreate the routes
 		//		assertEquals(true, ed.relocateFutureLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), activityH1.getLinkId(), activityW1.getLinkId(), plan.getPerson(), scenario.getNetwork(), tripRouter));
-		assertEquals(true, ed.relocateFutureLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), activityH1.getLinkId(), activityW1.getLinkId(), plan.getPerson() ));
+		assertTrue( ed.relocateFutureLegRoute( (Leg) plan.getPlanElements().get( firstCarLeg ), activityH1.getLinkId(), activityW1.getLinkId(), plan.getPerson() ) );
 		// 1-->3
 
 		//		assertEquals(true, ed.relocateFutureLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), activityW1.getLinkId(), activityH2.getLinkId(), plan.getPerson(), scenario.getNetwork(), tripRouter));
-		assertEquals(true, ed.relocateFutureLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), activityW1.getLinkId(), activityH2.getLinkId(), plan.getPerson() ));
+		assertTrue( ed.relocateFutureLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), activityW1.getLinkId(), activityH2.getLinkId(), plan.getPerson() ) );
 		// 3-->9
 
 		// get replaced legs and routes
@@ -215,10 +220,10 @@ public class EditRoutesTest {
 		legHW.setMode(TransportMode.walk);
 		legWH.setRoute(null);
 		legWH.setMode(TransportMode.walk);
-		assertEquals(true, ed.relocateFutureLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), activityH1.getLinkId(), activityW1.getLinkId(), plan.getPerson() ));
+		assertTrue( ed.relocateFutureLegRoute( (Leg) plan.getPlanElements().get( firstCarLeg ), activityH1.getLinkId(), activityW1.getLinkId(), plan.getPerson() ) );
 		// 1-->3
 
-		assertEquals(true, ed.relocateFutureLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), activityW1.getLinkId(), activityH2.getLinkId(), plan.getPerson() ));
+		assertTrue( ed.relocateFutureLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), activityW1.getLinkId(), activityH2.getLinkId(), plan.getPerson() ) );
 		// 3-->9
 
 		assertNotNull(legHW.getRoute());
@@ -228,11 +233,15 @@ public class EditRoutesTest {
 	/**
 	 * @author cdobler
 	 */
-	@Test
-	void testReplanCurrentLegRouteOne()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteOne( AccessEgressType accessEgressType )
 	// this is ok (we can still replan a single leg with the computer science router). kai, dec'15
 	{
-		createScenario();
+
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		int firstCarLeg = 1 ; // 1-->3
 		int scndCarLeg = 3 ; // 3-->9
 		if ( !scenario.getConfig().routing().getAccessEgressType().equals(RoutingConfigGroup.AccessEgressType.none) ) {
@@ -250,38 +259,42 @@ public class EditRoutesTest {
 		//		assertEquals(false, ed.replanCurrentLegRoute(plan, 2, 0, tripRouter, 8.0*3600));
 		//		assertEquals(false, ed.replanCurrentLegRoute(plan, 4, 0, tripRouter, 8.0*3600));
 
+		final Leg firstLegToReplan = (Leg) plan.getPlanElements().get( firstCarLeg );
 		// expect ArrayIndexOutOfBoundsException - using illegal indices for the current position in the route
 		try {
 			// yyyy probably testing only the first failure?  kai, nov'17
-			ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), -1, 8.0*3600 );
-			ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), 100, 8.0*3600 );
-			fail("expected IndexOutOfBoundsException.");
+			ed.replanCurrentLegRoute( firstLegToReplan, plan.getPerson(), -1, 8.0*3600 );
+			ed.replanCurrentLegRoute( firstLegToReplan, plan.getPerson(), 100, 8.0*3600 );
+			fail("We expected an IndexOutOfBoundsException but did not get one.");
 		} catch (IndexOutOfBoundsException e) {
 			log.debug("caught expected exception.", e);
 		}
 
 		// create new routes for HW-trip
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), 0, 8.0*3600 )); // HW, start Link
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), 1, 8.0*3600 )); // HW, en-route
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), 2, 8.0*3600 )); // HW, end Link
+		assertTrue( ed.replanCurrentLegRoute( firstLegToReplan, plan.getPerson(), 0, 8.0 * 3600 ) ); // HW, start Link
+		assertTrue( ed.replanCurrentLegRoute( firstLegToReplan, plan.getPerson(), 1, 8.0 * 3600 ) ); // HW, en-route
+		assertTrue( ed.replanCurrentLegRoute( firstLegToReplan, plan.getPerson(), 2, 8.0 * 3600 ) ); // HW, end Link
 
 		// create new routes for WH-trip
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 0, 8.0*3600 )); // WH, start Link
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 1, 8.0*3600 )); // WH, en-route
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 2, 8.0*3600 )); // WH, en-route
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 3, 8.0*3600 )); // WH, en-route
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 4, 8.0*3600 )); // WH, end Link
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 0, 8.0 * 3600 ) ); // WH, start Link
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 1, 8.0 * 3600 ) ); // WH, en-route
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 2, 8.0 * 3600 ) ); // WH, en-route
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 3, 8.0 * 3600 ) ); // WH, en-route
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 4, 8.0 * 3600 ) ); // WH, end Link
 
 	}
 
-	@Test
-	void testReplanCurrentLegRouteTwo()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteTwo( AccessEgressType accessEgressType )
 	{
 		/*
 		 *  replace destinations and create new routes
 		 */
 		// create new routes for HW-trip
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 		int firstCarLeg = 1 ; // 1-->3
 		int scndCarLeg = 3 ; // 3-->9
@@ -296,17 +309,20 @@ public class EditRoutesTest {
 		activityW1.setLinkId(Id.create("l2", Link.class));	// move Activity location
 		final boolean result = ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(),
 				0, 8.0 * 3600);
-		assertEquals(true, result); // HW, start Link
+		assertTrue( result ); // HW, start Link
 
 		final NetworkRoute route = (NetworkRoute)((Leg)plan.getPlanElements().get(firstCarLeg)).getRoute();
 		log.warn( route );
-		assertEquals(true, checkRouteValidity(route));
+		assertTrue( checkRouteValidity( route ) );
 	}
 
-	@Test
-	void testReplanCurrentLegRouteThree()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteThree( AccessEgressType accessEgressType )
 	{
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -320,15 +336,18 @@ public class EditRoutesTest {
 		Activity activityW1;
 		activityW1 = (Activity) plan.getPlanElements().get(2);
 		activityW1.setLinkId(Id.create("l2", Link.class));	// move Activity location
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), 1, 8.0*3600 ) );	// HW, en-route
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( firstCarLeg ), plan.getPerson(), 1, 8.0 * 3600 ) );	// HW, en-route
 		final NetworkRoute route = (NetworkRoute)((Leg)plan.getPlanElements().get(firstCarLeg)).getRoute();
-		assertEquals(true, checkRouteValidity(route));
+		assertTrue( checkRouteValidity( route ) );
 	}
 
-	@Test
-	void testReplanCurrentLegRouteFour()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteFour( AccessEgressType accessEgressType )
 	{
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -342,16 +361,19 @@ public class EditRoutesTest {
 		Activity activityW1;
 		activityW1 = (Activity) plan.getPlanElements().get(2);
 		activityW1.setLinkId(Id.create("l2", Link.class));	// move Activity location
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), 2, 8.0*3600 ));	// HW, end Link
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( firstCarLeg ), plan.getPerson(), 2, 8.0 * 3600 ) );	// HW, end Link
 		final NetworkRoute route = (NetworkRoute)((Leg)plan.getPlanElements().get(firstCarLeg)).getRoute();
-		assertEquals(true, checkRouteValidity(route));
+		assertTrue( checkRouteValidity( route ) );
 	}
 
-	@Test
-	void testReplanCurrentLegRouteFive()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteFive( AccessEgressType accessEgressType )
 	{
 		// create new routes for WH-trip
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -365,14 +387,17 @@ public class EditRoutesTest {
 
 		activityH2 = (Activity) plan.getPlanElements().get(4);
 		activityH2.setLinkId(Id.create("l4", Link.class));	// move Activity location
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 0, 8.0*3600 ));	// WH, start Link
-		assertEquals(true, checkRouteValidity((NetworkRoute)((Leg)plan.getPlanElements().get(scndCarLeg)).getRoute()));
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 0, 8.0 * 3600 ) );	// WH, start Link
+		assertTrue( checkRouteValidity( (NetworkRoute) ((Leg) plan.getPlanElements().get( scndCarLeg )).getRoute() ) );
 	}
 
-	@Test
-	void testReplanCurrentLegRouteSix()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteSix( AccessEgressType accessEgressType )
 	{
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -386,14 +411,17 @@ public class EditRoutesTest {
 
 		activityH2 = (Activity) plan.getPlanElements().get(4);
 		activityH2.setLinkId(Id.create("l4", Link.class));	// move Activity location
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 1, 8.0*3600 ));	// WH, en-route
-		assertEquals(true, checkRouteValidity((NetworkRoute)((Leg)plan.getPlanElements().get(scndCarLeg)).getRoute()));
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 1, 8.0 * 3600 ) );	// WH, en-route
+		assertTrue( checkRouteValidity( (NetworkRoute) ((Leg) plan.getPlanElements().get( scndCarLeg )).getRoute() ) );
 	}
 
-	@Test
-	void testReplanCurrentLegRouteSeven()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteSeven( AccessEgressType accessEgressType )
 	{
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -407,14 +435,17 @@ public class EditRoutesTest {
 
 		activityH2 = (Activity) plan.getPlanElements().get(4);
 		activityH2.setLinkId(Id.create("l4", Link.class));	// move Activity location
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 2, 8.0*3600 ));	// WH, en-route
-		assertEquals(true, checkRouteValidity((NetworkRoute)((Leg)plan.getPlanElements().get(scndCarLeg)).getRoute()));
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 2, 8.0 * 3600 ) );	// WH, en-route
+		assertTrue( checkRouteValidity( (NetworkRoute) ((Leg) plan.getPlanElements().get( scndCarLeg )).getRoute() ) );
 	}
 
-	@Test
-	void testReplanCurrentLegRouteEight()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteEight( AccessEgressType accessEgressType )
 	{
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -428,14 +459,17 @@ public class EditRoutesTest {
 
 		activityH2 = (Activity) plan.getPlanElements().get(4);
 		activityH2.setLinkId(Id.create("l4", Link.class));	// move Activity location
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 3, 8.0*3600 ) );	// WH, en-route
-		assertEquals(true, checkRouteValidity((NetworkRoute)((Leg)plan.getPlanElements().get(scndCarLeg)).getRoute()));
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 3, 8.0 * 3600 ) );	// WH, en-route
+		assertTrue( checkRouteValidity( (NetworkRoute) ((Leg) plan.getPlanElements().get( scndCarLeg )).getRoute() ) );
 	}
 
-	@Test
-	void testReplanCurrentLegRouteNine()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteNine( AccessEgressType accessEgressType )
 	{
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -449,16 +483,19 @@ public class EditRoutesTest {
 
 		activityH2 = (Activity) plan.getPlanElements().get(4);
 		activityH2.setLinkId(Id.create("l4", Link.class));	// move Activity location
-		assertEquals(true, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 4, 8.0*3600 ));	// WH, end Link
-		assertEquals(true, checkRouteValidity((NetworkRoute)((Leg)plan.getPlanElements().get(scndCarLeg)).getRoute()));
+		assertTrue( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 4, 8.0 * 3600 ) );	// WH, end Link
+		assertTrue( checkRouteValidity( (NetworkRoute) ((Leg) plan.getPlanElements().get( scndCarLeg )).getRoute() ) );
 
 	}
 
-	@Test
-	void testReplanCurrentLegRouteTen()
+	@ParameterizedTest
+	@EnumSource(value = AccessEgressType.class, names = { "none", "accessEgressModeToLink" })
+	void testReplanCurrentLegRouteTen( AccessEgressType accessEgressType )
 	{
 		// expect EditRoutes to return false if the Route in the leg is not a NetworkRoute
-		createScenario();	// reset scenario
+		Config config = ConfigUtils.createConfig();
+		config.routing().setAccessEgressType( accessEgressType );
+		createScenario( config );
 		EditRoutes ed = new EditRoutes(scenario.getNetwork(), pathCalculator, scenario.getPopulation().getFactory());
 
 		int firstCarLeg = 1 ; // 1-->3
@@ -475,26 +512,36 @@ public class EditRoutesTest {
 		legHW.setMode(TransportMode.walk);
 		legWH.setRoute(null);
 		legWH.setMode(TransportMode.walk);
-		assertEquals(false, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(firstCarLeg), plan.getPerson(), 0, 8.0*3600 ));
-		assertEquals(false, ed.replanCurrentLegRoute((Leg) plan.getPlanElements().get(scndCarLeg), plan.getPerson(), 0, 8.0*3600 ));
+		assertFalse( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( firstCarLeg ), plan.getPerson(), 0, 8.0 * 3600 ) );
+		assertFalse( ed.replanCurrentLegRoute( (Leg) plan.getPlanElements().get( scndCarLeg ), plan.getPerson(), 0, 8.0 * 3600 ) );
 	}
 
 
 /**
  * @author cdobler
  */
-private void createScenario() {
-	scenario = ScenarioUtils.createScenario(ConfigUtils.createConfig());
+private void createScenario( Config config ){
+	String [] modes = { TransportMode.car };
 
-	createSampleNetwork();
+	config.routing().setNetworkModes( Arrays.asList( modes ) );
+	config.qsim().setMainModes( Arrays.asList( modes ) );
+
+	// ---
+
+	scenario = ScenarioUtils.createScenario( config );
+
+	createAndAddSampleNetwork();
+	createAndAddSamplePlan();
+
 	createTripRouter();
-	createSamplePlan();
+	PrepareForSimUtils.createDefaultPrepareForSim( scenario ).run();
+
 }
 
-/**
+	/**
  * @author cdobler
  */
-private void createSampleNetwork() {
+private void createAndAddSampleNetwork() {
 	Network network = scenario.getNetwork();
 	NetworkFactory networkFactory = network.getFactory();
 
@@ -508,19 +555,19 @@ private void createSampleNetwork() {
 	/*
 	 * create Nodes
 	 */
-	coord = new Coord((double) 0, (double) 0);
+	coord = new Coord( 0, 0 );
 	node1 = networkFactory.createNode(Id.create("n1", Node.class), coord);
 	network.addNode(node1);
 
-	coord = new Coord((double) 1, (double) 0);
+	coord = new Coord( 1, 0 );
 	node2 = networkFactory.createNode(Id.create("n2", Node.class), coord);
 	network.addNode(node2);
 
-	coord = new Coord((double) 1, (double) 1);
+	coord = new Coord( 1, 1 );
 	node3 = networkFactory.createNode(Id.create("n3", Node.class), coord);
 	network.addNode(node3);
 
-	coord = new Coord((double) 0, (double) 1);
+	coord = new Coord( 0, 1 );
 	node4 = networkFactory.createNode(Id.create("n4", Node.class), coord);
 	network.addNode(node4);
 
@@ -546,14 +593,19 @@ private void createSampleNetwork() {
 /**
  * @author cdobler
  */
-private void createSamplePlan() {
-	plan = PopulationUtils.createPlan(PopulationUtils.getFactory().createPerson(Id.create(1, Person.class)));
+private void createAndAddSamplePlan() {
+	final Population population = scenario.getPopulation();
+	PopulationFactory pf = population.getFactory();
+	final Person person = pf.createPerson( Id.createPersonId( 1 ) );
+	population.addPerson( person );
+	plan = pf.createPlan();
+	person.addPlan( plan ); // this also sets the backpointer
 
-	Activity activityH1 = PopulationUtils.createAndAddActivityFromLinkId(((Plan) plan), "h", Id.create("l1", Link.class));
-	PopulationUtils.createAndAddLeg( ((Plan) plan), TransportMode.car );
-	Activity activityW1 = PopulationUtils.createAndAddActivityFromLinkId(((Plan) plan), "w", Id.create("l3", Link.class));
-	PopulationUtils.createAndAddLeg( ((Plan) plan), TransportMode.car );
-	Activity activityH2 = PopulationUtils.createAndAddActivityFromLinkId(((Plan) plan), "h", Id.create("l1", Link.class));
+	Activity activityH1 = PopulationUtils.createAndAddActivityFromLinkId( plan, "h", Id.create("l1", Link.class ) );
+	PopulationUtils.createAndAddLeg( plan, TransportMode.car );
+	Activity activityW1 = PopulationUtils.createAndAddActivityFromLinkId( plan, "w", Id.create("l3", Link.class ) );
+	PopulationUtils.createAndAddLeg( plan, TransportMode.car );
+	Activity activityH2 = PopulationUtils.createAndAddActivityFromLinkId( plan, "h", Id.create("l1", Link.class ) );
 
 	/*
 	 * set activity start times and durations
@@ -568,14 +620,10 @@ private void createSamplePlan() {
 	/*
 	 * set coordinates for activities
 	 */
-	((Activity) activityH1).setCoord(scenario.getNetwork().getLinks().get(activityH1.getLinkId()).getCoord());
-	((Activity) activityW1).setCoord(scenario.getNetwork().getLinks().get(activityW1.getLinkId()).getCoord());
-	((Activity) activityH2).setCoord(scenario.getNetwork().getLinks().get(activityH2.getLinkId()).getCoord());
+	activityH1.setCoord(scenario.getNetwork().getLinks().get(activityH1.getLinkId() ).getCoord() );
+	activityW1.setCoord(scenario.getNetwork().getLinks().get(activityW1.getLinkId() ).getCoord() );
+	activityH2.setCoord(scenario.getNetwork().getLinks().get(activityH2.getLinkId() ).getCoord() );
 
-	/*
-	 * run a PlanRouter to create and set routes
-	 */
-	new PlanRouter(tripRouter, TimeInterpretation.create(scenario.getConfig())).run(plan);
 }
 
 /**
@@ -585,7 +633,7 @@ private void createTripRouter() {
 	com.google.inject.Injector injector = Injector.createInjector(scenario.getConfig(), new AbstractModule() {
 		@Override
 		public void install() {
-			install(AbstractModule.override(Arrays.asList(new TripRouterModule()), new AbstractModule() {
+			install(AbstractModule.override( List.of( new TripRouterModule() ), new AbstractModule() {
 				@Override
 				public void install() {
 					install(new ScenarioByInstanceModule(scenario));
